--- a/project/src/components/navbar/Navbar.css
+++ b/project/src/components/navbar/Navbar.css
@@ -73,8 +73,12 @@
       .down {
         width: 90%;
         display: flex;
-      
-        height: auto;
+        position: absolute;
+        top: 22.5%;
+        left: 10px;
+        z-index: 100;
+        background-color: white;
+        height: 60%;
         margin-left: 5%;
         box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
           rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
@@ -112,18 +116,19 @@
      .dowpimg{
       margin-left: 3%;
        width: 32.5%;
-       height: auto;
-       
+       height: 40% ;
        /* border:1px solid red; */
      }
      .dowpimg1{
       /* margin-left: 1%; */
        width: 70%;
-       height: 55vh;
-       
+       height: 70%;
        /* border:1px solid red; */
      }
-     
+     .dowpimg1>img{
+      width: 100%;
+      height: 100%;
+     }
       
       #divcol {
         background-color: rgba(249, 249, 249, 255);
@@ -176,6 +181,7 @@
       .texthover {
         color: #333333;
         /* font-weight: 500; */
+        padding:10px 10px 10px 5px;
       }
       
       a {
