--- a/project/src/components/productdetails/Productdetails.css
+++ b/project/src/components/productdetails/Productdetails.css
@@ -7,18 +7,17 @@
     display: flex;
     /* border: 1px solid teal; */
     column-gap: 30px;
-    /* height: 70%; */
     border-top: 0.5px solid rgb(236, 231, 231);
     margin: 1%;
     padding: 2%;
 }
 .image{
     /* border: 1px solid red; */
-    padding: 3%;
+    padding: 2%;
 }
 .details{
     /* border: 1px solid red; */
-    padding: 2%;
+    /* padding: 2%; */
     width: 60%;
     height:0% ;
     /* display: flex; */
@@ -38,18 +37,12 @@
     color: white;
     border:black;
     font-size: 100px;
-    /* position: absolute; */
     top: 20%;
-    /* right: 5%; */
     left: 70%;
-    /* transform: translate(-50%, -50%); */
-    /* -ms-transform: translate(-50%, -50%); */
-    /* text-align: center; */
   }
   .cart{
       padding: 2%;
       margin: 1%;
-      /* font-weight: bold; */
       width: 200px;
   }
   .port{
@@ -57,7 +50,6 @@
   }
   .rating{
       display: flex;
-      /* border: 1px solid green; */
       align-items: center;
       justify-content: space-between;
       width: 58%;
